sample-app/_kube/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo-sync
  namespace: demo
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
 rules:
  - host: demo-sync.services.aur.ziprealty.com
    http:
      paths:
      - path: /
        backend:
          serviceName: demo-sync
          servicePort: 8080
